# hyperseti

./: .codecov.yaml  .coveragerc  .gitignore  Dockerfile  MANIFEST.in  README.md  hyperseti.py  peak.py  plotting.py  pyproject.toml  requirements.txt  requirements.yaml  requirements_test.txt  run_coverage_blc00.sh  setup.cfg  setup.py  test_data.py  test_dimension_scale.py  test_hyperseti.ipynb  test_hyperseti.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pytest-cov.yml  test_push.yml
conda-recipe/: README.md  bld.bat  build.sh  meta.yaml
docs/: conf.py  index.rst
docs/_static/: extra.css
docs/pipeline/: dedoppler.md  hitsearch.md  preprocessing.md
docs/technotes/: 01_api_and_metadata.md  02_the_data_array.md  03_logging.md  04_sk_flag.md  05_peak_finding_comparison.md  06_doppler_smearing.md  07_ddsk_dedoppler_spectral_kurtosis.md  08_current_state_2022.04.29.md  09_sk_flagging_revisited.ipynb  10_mars_hyperseti_0p3.ipynb
docs/usage/: config.md  data_array.md  hit_browser.md  hit_db.md  hyperfrost.md  quickstart.md
examples/: parkes_uwl.py  parkes_uwl.yaml
hyperseti/: __init__.py  blanking.py  data.py  data_array.py  dedoppler.py  dimension_scale.py  filter.py  findET.py  gpu_kernels.py  hit_browser.py  hits.py  hyperseti.py  kurtosis.py  log.py  normalize.py  peak.py  pipeline.py  plotting.py  singletons.py  tsdat.py  utils.py  version.py
hyperseti/hyperfrost/: bifrost.py  cmd_tool.py  data_source.py  hyperfrost_block.py
hyperseti/io/: __init__.py  filterbank.py  hdf5.py  hit_db.py  hit_db_schema.py  hit_db_schema.yml  load_config.py  load_data.py  setigen.py
hyperseti/kernels/: __init__.py  blank_hits.py  dedoppler.py  kernel_manager.py  peak_finder.py  peaks.py  smear_corr.py
hyperseti/test_data/: Voyager1.single_coarse.fine_res.yaml  __init__.py
notebook/: try_hyperseti.ipynb
notebook/devel/: README.md  compare_tseti.ipynb  kernel_devel2.ipynb  kernel_devel_tseti.ipynb  kurtosis_devel.ipynb  peak_find_devel.ipynb  pipeline_devel.ipynb  spectral_kurtosis.ipynb  test_data_array.ipynb  xarray_devel.ipynb
test/: data_defs.py  download_test_data.py  file_defs.py  test_bifrost.py  test_blanking.py  test_data.py  test_data_array.py  test_datwrapper.py  test_dedoppler.py  test_dedoppler_plan.py  test_dimension_scale.py  test_extent.py  test_hit_browser.py  test_hit_db.py  test_hits.py  test_hyperseti.py  test_io_setigen.py  test_kernel_manager.py  test_kurtosis.py  test_log.py  test_normalize.py  test_on_gpu.py  test_peak.py  test_peak_kernel.py  test_pipeline.py  test_plotting.py  test_smear_corr_kernel.py  test_tsdat.py  test_utils.py  test_with_voyager.py
test/test_data/: Voyager1.single_coarse.fine_res.csv
