[tool.poetry]
name        = "hyperseti"
version     = "1.0.0"
description = "GPU-accelerated code for searching radio astronomy spectral datasets for narrowband technosignatures (SETI)"
authors     = ["Danny C. Price"]
license     = "MIT"
readme      = "README.md"

[tool.poetry.dependencies]
python      = "^3.8"
numpy       = "^1.21.0"
cupy        = "^12.0.0"
pandas      = "^2.0.0"
h5py        = "^3.8.0"
pyyaml      = "^6.0.0"
Logbook     = "^1.5.3"
astropy     = "^5.2.2"
setigen     = "^2.4.0"
hdf5plugin  = "^4.1.1"
matplotlib  = "^3.7.1"
blimpy      = "^2.1.4"
dask        = "^2023.3.2"

[project.scripts]
findET = "hyperseti.findET:cmd_tool"
tsdat  = "hyperseti.tsdat:cmd_tool" 

[tool.poetry.group.test.dependencies]
pytest           = "^7.2.2"
turbo_seti       = "^2.3.2"

[tool.poetry.group.dev.dependencies]
coverage         = "^7.2.3"
codecov          = "^2.1.12"
pytest-runner    = "^6.0.0"
pytest-codecov   = "^0.5.1"
sphinx           = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
myst-parser      = "^1.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose --cov=hyperseti test/"

[build-system]
requires        = ["poetry-core"]
build-backend   = "poetry.core.masonry.api"
