[tool.poetry]
name            = "hyperseti"
version         = "1.1.0"
description     = "GPU-accelerated code for searching radio astronomy spectral datasets for narrowband technosignatures (SETI)"
authors         = ["Danny C. Price"]
license         = "MIT"
readme          = "README.md"
keywords        = ["seti", "technosignatures", "breakthrough-listen", "radio-astronomy"]
include         = ["hyperseti/io/hit_db_schema.yml"]
documentation   = "https://hyperseti.readthedocs.io"
homepage        = "https://hyperseti.readthedocs.io"
repository      = "https://github.com/UCBerkeleySETI/hyperseti"

[tool.poetry.dependencies]
python      = ">=3.8"
numpy       = ">=1.21"
cupy        = ">=11.0"
pandas      = ">=2.0"
h5py        = ">=3.8"
pyyaml      = ">=6.0"
Logbook     = ">=1.5"
astropy     = ">=5.2"
setigen     = ">=2.4"
hdf5plugin  = ">=4.1"
matplotlib  = ">=3.7"

[project.scripts]
findET = "hyperseti.findET:cmd_tool"
tsdat  = "hyperseti.tsdat:cmd_tool" 

[tool.poetry.group.test.dependencies]
pytest           = ">=7.2"
turbo_seti       = ">=2.3"
blimpy           = ">=2.1"

[tool.poetry.group.docs.dependencies]
coverage         = ">=7.2"
codecov          = ">=2.1"
pytest-runner    = ">=6.0"
pytest-codecov   = ">=0.5"
sphinx           = ">=6.0"
sphinx-rtd-theme = ">=1.2"
myst-parser      = ">=1.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose --cov=hyperseti test/"

[build-system]
requires        = ["poetry-core"]
build-backend   = "poetry.core.masonry.api"
